--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.home.d2e.numbersprinter.LoginFragment"
-    android:gravity="top|center"
+    android:gravity="center"
     android:orientation="vertical"
     >
 
