--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,7 +39,7 @@
         android:hint="@string/tEnterPassword"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:textIsSelectable="false"
         android:layout_marginTop="5dp" />
 
