--- a/app/src/main/res/layout/item_grid_element.xml
+++ b/app/src/main/res/layout/item_grid_element.xml
@@ -13,9 +13,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+
         android:id="@+id/tvField"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_margin="6dp" />
+        android:layout_margin="6dp"
+        android:textSize="24sp" />
 </LinearLayout>
