--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -34,9 +34,9 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/etEmail"
+        android:id="@+id/etPassCheck"
         android:layout_gravity="center_horizontal"
-        android:hint="@string/tEmail" />
+        android:hint="@string/tRetypePassword" />
 
     <Button
         android:layout_width="wrap_content"
