--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.home.d2e.numbersprinter.ResultListFragment"
+    tools:context="org.home.d2e.numbersprinter.ResultsFragment"
     android:orientation="vertical"
     android:gravity="center"
 
