--- a/app/src/main/res/layout-land/fragment_rules.xml
+++ b/app/src/main/res/layout-land/fragment_rules.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context="org.home.d2e.numbersprinter.RulesFragment">
 
 
@@ -14,12 +14,11 @@
         android:layout_height="200dp"
         android:id="@+id/ivLogo"
         android:src="@drawable/penguins01"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp" />
+        android:layout_margin="20dp" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tRules"
         android:id="@+id/tvRules"
