--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -18,7 +18,9 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/tvPlayer"
             android:gravity="center"
-            android:layout_margin="10dp" />
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -26,8 +28,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/tvElapsedTime"
             android:gravity="center"
-            android:layout_margin="10dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
     </LinearLayout>
 
     <LinearLayout
