many things impoved

--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -16,7 +16,7 @@
         android:layout_height="200dp"
         android:id="@+id/ivLogo"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/penguins01"
+        android:src="@drawable/logo01"
         android:layout_margin="10dp" />
 
     <Button
