--- a/app/src/main/res/layout-land/fragment_start.xml
+++ b/app/src/main/res/layout-land/fragment_start.xml
@@ -14,7 +14,7 @@
         android:id="@+id/ivLogo"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/penguins01" />
+        android:src="@drawable/logo01" />
 
     <LinearLayout
         android:layout_width="wrap_content"
