--- a/app/src/main/res/layout/fragment_rules.xml
+++ b/app/src/main/res/layout/fragment_rules.xml
@@ -13,7 +13,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/ivLogo"
-        android:src="@drawable/penguins01"
+        android:src="@drawable/logo01"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="20dp" />
 
