--- a/app/src/main/res/layout-land/fragment_results.xml
+++ b/app/src/main/res/layout-land/fragment_results.xml
@@ -5,21 +5,30 @@
     tools:context="org.home.d2e.numbersprinter.ResultsFragment"
     android:orientation="horizontal"
     android:gravity="center"
+    android:baselineAligned="false"
 
     >
 
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/ivLogo"
-        android:src="@drawable/logo01"
-        android:layout_marginLeft="20dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:padding="10dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ivLogo"
+            android:src="@drawable/logo01" />
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="2">
 
         <TextView
             android:layout_width="match_parent"
