--- a/app/src/main/res/layout-land/fragment_start.xml
+++ b/app/src/main/res/layout-land/fragment_start.xml
@@ -5,24 +5,34 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     tools:context="org.home.d2e.numbersprinter.StartFragment"
+    android:baselineAligned="false"
     android:gravity="center">
 
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ImageView
-        android:id="@+id/ivLogo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo01" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_weight="3"
+        android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/ivLogo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/logo01"
+            android:layout_weight="3" />
+    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
         android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="60dp">
+        android:gravity="center"
+        android:layout_weight="2">
 
         <Button
             android:id="@+id/btnPlay"
@@ -42,7 +52,6 @@
             android:id="@+id/btnResults"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:text="@string/btnResults" />
 
