--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -9,31 +9,45 @@
     >
 
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/ivLogo"
-        android:src="@drawable/logo01"
-        android:layout_marginTop="10dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tAchievers"
-        android:id="@+id/tvTop10"
-        android:layout_gravity="center_horizontal"
-
- />
-
-    <ListView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvAchievers"
-        android:layout_gravity="center_horizontal"
-        android:choiceMode="none"
-        android:layout_margin="10dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:gravity="center">
 
-         />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ivLogo"
+            android:src="@drawable/logo01" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/tAchievers"
+            android:id="@+id/tvTop10"
+            android:layout_gravity="center_horizontal"
+
+            android:layout_marginTop="10dp" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lvAchievers"
+            android:layout_gravity="center_horizontal"
+            android:choiceMode="none"
+            android:layout_margin="10dp"
+
+             />
+    </LinearLayout>
 
 </LinearLayout>
