--- a/app/src/main/res/layout/fragment_rules.xml
+++ b/app/src/main/res/layout/fragment_rules.xml
@@ -9,20 +9,34 @@
     tools:context="org.home.d2e.numbersprinter.RulesFragment">
 
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/ivLogo"
-        android:src="@drawable/logo01"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp" />
-
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tRules"
-        android:id="@+id/tvRules"
-        android:layout_margin="10dp"
-        android:gravity="center" />
+        android:layout_weight="3"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ivLogo"
+            android:src="@drawable/logo01" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/tRules"
+            android:id="@+id/tvRules"
+            android:layout_margin="10dp"
+            android:gravity="center" />
+    </LinearLayout>
+
 </LinearLayout>
