--- a/app/src/main/res/layout-land/fragment_game_over.xml
+++ b/app/src/main/res/layout-land/fragment_game_over.xml
@@ -117,6 +117,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnNewGame"
             android:text="@string/btnNewGame"
+            android:background="@drawable/button_design"
             android:layout_margin="10dp" />
 
     </LinearLayout>
