--- a/app/src/main/res/layout-land/fragment_rules.xml
+++ b/app/src/main/res/layout-land/fragment_rules.xml
@@ -30,7 +30,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:gravity="center">
+
+        android:gravity="center"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <TextView
             android:layout_width="match_parent"
