--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -14,8 +14,10 @@
         android:layout_height="wrap_content"
         android:text="@string/tPlsSelectPlayer"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_margin="10dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -23,16 +25,20 @@
         android:baselineAligned="false"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/lvPlayers"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="2" />
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ListView
+                android:id="@+id/lvPlayers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="2"
+                android:layout_margin="10dp" />
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
@@ -48,7 +54,6 @@
                 android:id="@+id/tvSelectedPlayer"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
                 android:gravity="center" />
 
             <EditText
@@ -87,7 +92,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/tOK"
-                    android:id="@+id/btnPlayerOK" />
+                    android:background="@drawable/button_design"
+                    android:id="@+id/btnPlayerOK"
+                    android:layout_marginRight="10dp" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -96,6 +103,7 @@
                     android:id="@+id/btnPlayerNew"
                     android:clickable="false"
                     android:elegantTextHeight="false"
+                    android:background="@drawable/button_design"
                     android:enabled="true" />
 
             </LinearLayout>
