--- a/app/src/main/res/layout-land/fragment_results.xml
+++ b/app/src/main/res/layout-land/fragment_results.xml
@@ -28,7 +28,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:padding="15dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -37,7 +38,6 @@
             android:text="@string/tAchievers"
             android:id="@+id/tvTop10"
 
-            android:layout_marginTop="10dp"
             android:gravity="center" />
 
         <ListView
@@ -46,9 +46,8 @@
             android:id="@+id/lvAchievers"
             android:layout_gravity="center_horizontal"
             android:choiceMode="none"
-            android:layout_margin="10dp"
 
-             />
+            />
     </LinearLayout>
 
 </LinearLayout>
