--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:text="@string/btnPlay"
             android:id="@+id/btnPlay"
+            android:background="@drawable/button_design"
             android:layout_gravity="center_horizontal" />
 
         <Button
@@ -45,6 +46,7 @@
             android:text="@string/btnRules"
             android:id="@+id/btnRules"
             android:layout_gravity="center_horizontal"
+            android:background="@drawable/button_design"
             android:layout_marginTop="5dp" />
 
         <Button
@@ -53,6 +55,7 @@
             android:text="@string/btnResults"
             android:id="@+id/btnResults"
             android:layout_gravity="center_horizontal"
+            android:background="@drawable/button_design"
             android:layout_marginTop="5dp" />
     </LinearLayout>
 
