--- a/app/src/main/res/layout/item_grid_element.xml
+++ b/app/src/main/res/layout/item_grid_element.xml
@@ -1,5 +1,4 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -11,12 +10,11 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
+        android:id="@+id/tvField"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        android:id="@+id/tvField"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_margin="6dp"
+        android:gravity="center"
         android:textSize="28sp" />
 </LinearLayout>
