fixed game matrix 5x5 switch to flexible from 2x2 to 7x7

--- a/app/src/main/res/layout-land/fragment_game.xml
+++ b/app/src/main/res/layout-land/fragment_game.xml
@@ -55,9 +55,7 @@
             android:layout_height="match_parent"
             android:id="@+id/gvGameField"
             android:gravity="center"
-            android:orientation="vertical"
-            android:numColumns="5"
-            android:layout_margin="10dp" />
+            android:orientation="vertical" />
     </LinearLayout>
 
 </LinearLayout>
